--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,6 @@
 version: "3.8"
 services:
-  bot:
+  app:
     build: .
     env_file:
       - api.env
@@ -11,7 +11,6 @@ services:
     environment:
       POSTGRES_USER: root
       POSTGRES_PASSWORD: root
-      POSTGRES_DB: test_db
     ports:
       - "5432:5432"
   pgadmin:
